# network-adoptor-switcher

./: .editorconfig  .env.example  .gitignore  BUILD.md  CHANGELOG.md  CICD_TROUBLESHOOTING.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.md  SECURITY.md  app.manifest  build.ps1  build_spec.py  pyproject.toml  requirements.md  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  dependency-review.yml  release.yml
src/: __init__.py  gui.py  main.py  network_manager.py
src/models/: __init__.py  models.py
tests/: test_models.py  test_network_manager.py
